--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tox
+          pip install wheel setuptools
       - name: Build package
-        run: tox -e package
+        run: python setup.py -q sdist bdist_wheel
