--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
+          pip install pytest pytest-cov pytest-asyncio requests mock
       - name: Run unit tests
         run: py.test tests/unit --junit-xml=xunit-${{ matrix.python-version }}.xml
   integration-tests:
@@ -63,5 +64,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
+          pip install pytest pytest-cov pytest-asyncio requests mock
       - name: Run integration tests
         run: py.test tests/integration --junit-xml=xunit-${{ matrix.python-version }}.xml
