--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
-          pip install pytest pytest-cov pytest-asyncio requests mock
+          pip install pytest pytest-cov pytest-asyncio requests mock aioresponses
       - name: Run unit tests
         run: py.test tests/unit --junit-xml=xunit-${{ matrix.python-version }}.xml
   integration-tests:
