Add some test execution in order to debug this

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,8 +45,11 @@ jobs:
           pip install pytest pytest-cov pytest-asyncio requests mock aioresponses
       - name: Run coverage
         run: |
-          ls -lah
-          py.test tests --cov-fail-under=70 --cov=fastapi_mvc_template --cov-report=xml
+          py.test tests  --cov=$PWD/fastapi_mvc_template --cov-report=xml
+          py.test tests  --cov=./fastapi_mvc_template --cov-report=xml
+          py.test tests/unit  --cov=$PWD/fastapi_mvc_template --cov-report=xml
+          py.test tests/unit  --cov=./fastapi_mvc_template --cov-report=xml
+          py.test tests/unit --cov-fail-under=70 --cov=fastapi_mvc_template --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
