Remove cov-fail-uner, remove debug coverages

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,12 +44,7 @@ jobs:
           pip install .
           pip install pytest pytest-cov pytest-asyncio requests mock aioresponses
       - name: Run coverage
-        run: |
-          py.test tests  --cov=$PWD/fastapi_mvc_template --cov-report=xml
-          py.test tests  --cov=./fastapi_mvc_template --cov-report=xml
-          py.test tests/unit  --cov=$PWD/fastapi_mvc_template --cov-report=xml
-          py.test tests/unit  --cov=./fastapi_mvc_template --cov-report=xml
-          py.test tests/unit --cov-fail-under=70 --cov=fastapi_mvc_template --cov-report=xml
+        run: py.test tests --cov=./fastapi_mvc_template --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
