--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,31 +29,6 @@ jobs:
         run: flake8 --select=C901 --tee --output-file=code_complexity.txt --count fastapi_mvc_template
       - name: TODO
         run: flake8 --select=T --tee --output-file=todo_occurence.txt --statistics --count setup.py fastapi_mvc_template tests
-  code-coverage:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.7
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install .
-          pip install pytest pytest-cov pytest-asyncio requests mock aioresponses
-      - name: Run coverage
-        run: |
-          pytest tests/unit --cov=./fastapi_mvc_template --cov-report=xml
-          ls -lah
-          echo $PWD
-          ls -lah ./fastapi_mvc_template
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
-        with:
-          fail_ci_if_error: true
-          files: ./coverage.xml
   unit-tests:
     runs-on: ubuntu-latest
     strategy:
@@ -73,6 +48,13 @@ jobs:
           pip install pytest pytest-cov pytest-asyncio requests mock aioresponses
       - name: Run unit tests
         run: py.test tests/unit --junit-xml=xunit-${{ matrix.python-version }}.xml
+      - name: Run coverage
+        run: pytest --cov=fastapi_mvc_template --cov-fail-under=70 --cov-report=xml --cov-report=term-missing tests
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          fail_ci_if_error: true
+          files: ./coverage.xml
   integration-tests:
     runs-on: ubuntu-latest
     strategy:
