Fix service targetPort

--- a/charts/fastapi-mvc-template/templates/service.yaml
+++ b/charts/fastapi-mvc-template/templates/service.yaml
@@ -8,8 +8,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
-      name: http
   selector:
     {{- include "fastapi-mvc-template.selectorLabels" . | nindent 4 }}
