--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install wheel setuptools
+      - name: Install project
+        run: make install
       - name: Build package
-        run: python setup.py -q sdist bdist_wheel
+        run: poetry build --no-interaction -f wheel
