--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install project
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8 flake8-docstrings flake8-import-order
+          make install
+          poetry shell
       - name: Style guide
         run: |
           flake8 --select=E,W,I --max-line-length 80 --import-order-style pep8 --exclude .git,__pycache__,.eggs,*.egg,.pytest_cache,fastapi_mvc_template/version.py,setup.py,fastapi_mvc_template/__init__.py --tee --output-file=pep8_violations.txt --statistics --count setup.py fastapi_mvc_template
@@ -41,11 +41,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install project
         run: |
-          python -m pip install --upgrade pip
-          pip install .
-          pip install pytest pytest-cov pytest-asyncio requests mock aioresponses
+          make install
+          poetry shell
       - name: Run unit tests
         run: py.test tests/unit --junit-xml=xunit-${{ matrix.python-version }}.xml
       - name: Run coverage
@@ -67,10 +66,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install project
         run: |
-          python -m pip install --upgrade pip
-          pip install .
-          pip install pytest pytest-cov pytest-asyncio requests mock
+          make install
+          poetry shell
       - name: Run integration tests
         run: py.test tests/integration --junit-xml=xunit-${{ matrix.python-version }}.xml
