--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,24 @@ name: Test
 on: [push, pull_request]
 
 jobs:
-  metrics:
+  pre_job:
+    runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@v3.4.1
+        with:
+          skip_after_successful_duplicate: 'true'
+          concurrent_skipping: same_content
+          do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
+  buid:
+    needs: pre_job
+    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [ 3.7, 3.8, 3.9 ]
 
     steps:
       - uses: actions/checkout@v2
@@ -16,9 +29,19 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install project
-        run: |
-          make install
-          poetry shell
+        run: make install
+      - name: Build project
+        run: poetry build -f wheel
+  metrics:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.7, 3.8, 3.9]
+
+    steps:
+      - name: Activate virtualenv
+        run: poetry shell
       - name: Style guide
         run: |
           flake8 --select=E,W,I --max-line-length 80 --import-order-style pep8 --exclude .git,__pycache__,.eggs,*.egg,.pytest_cache,fastapi_mvc_template/version.py,setup.py,fastapi_mvc_template/__init__.py --tee --output-file=pep8_violations.txt --statistics --count setup.py fastapi_mvc_template
@@ -30,21 +53,15 @@ jobs:
       - name: TODO
         run: flake8 --select=T --tee --output-file=todo_occurence.txt --statistics --count setup.py fastapi_mvc_template tests
   unit-tests:
+    needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [ 3.7, 3.8, 3.9 ]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install project
-        run: |
-          make install
-          poetry shell
+      - name: Activate virtualenv
+        run: poetry shell
       - name: Run unit tests
         run: py.test tests/unit --junit-xml=xunit-${{ matrix.python-version }}.xml
       - name: Run coverage
@@ -55,20 +72,14 @@ jobs:
           fail_ci_if_error: true
           files: ./coverage.xml
   integration-tests:
+    needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [ 3.7, 3.8, 3.9 ]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install project
-        run: |
-          make install
-          poetry shell
+      - name: Activate virtualenv
+        run: poetry shell
       - name: Run integration tests
         run: py.test tests/integration --junit-xml=xunit-${{ matrix.python-version }}.xml
