--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,8 +31,17 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Load Poetry cache
+        uses: actions/cache@v2
+        with:
+          path: /poetry
+          key: ${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Update Path
+        run: echo "/poetry/bin" >> $GITHUB_PATH
       - name: Install project
-        run: make install
+        run: |
+          export POETRY_HOME=/poetry
+          make install
       - name: Build project
         run: poetry build -f wheel
   metrics:
@@ -40,9 +49,21 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [ 3.7, 3.8, 3.9 ]
 
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Load Poetry cache
+        uses: actions/cache@v2
+        with:
+          path: /poetry
+          key: ${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Update Path
+        run: echo "/poetry/bin" >> $GITHUB_PATH
       - name: Activate virtualenv
         run: poetry shell
       - name: Style guide
@@ -63,6 +84,18 @@ jobs:
         python-version: [ 3.7, 3.8, 3.9 ]
 
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Load Poetry cache
+        uses: actions/cache@v2
+        with:
+          path: /poetry
+          key: ${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Update Path
+        run: echo "/poetry/bin" >> $GITHUB_PATH
       - name: Activate virtualenv
         run: poetry shell
       - name: Run unit tests
@@ -82,6 +115,18 @@ jobs:
         python-version: [ 3.7, 3.8, 3.9 ]
 
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Load Poetry cache
+        uses: actions/cache@v2
+        with:
+          path: /poetry
+          key: ${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Update Path
+        run: echo "/poetry/bin" >> $GITHUB_PATH
       - name: Activate virtualenv
         run: poetry shell
       - name: Run integration tests
