--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,17 +31,18 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Load Poetry cache
-        uses: actions/cache@v2
-        with:
-          path: $HOME/.poetry
-          key: ${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
       - name: Update Path
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
       - name: Install project
         run: |
           export POETRY_HOME=$HOME/.poetry
           make install
+      - name: Init Poetry cache
+        id: cached-poetry
+        uses: actions/cache@v2
+        with:
+          path: $HOME/.poetry
+          key: ${{ env.GITHUB_RUN_ID }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('**/pyproject.toml') }}
       - name: Build project
         run: poetry build -f wheel
   metrics:
@@ -61,7 +62,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: $HOME/.poetry
-          key: ${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ env.GITHUB_RUN_ID }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('**/pyproject.toml') }}
       - name: Update Path
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
       - name: Activate virtualenv
@@ -93,7 +94,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: $HOME/.poetry
-          key: ${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ env.GITHUB_RUN_ID }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('**/pyproject.toml') }}
       - name: Update Path
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
       - name: Activate virtualenv
@@ -124,7 +125,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: $HOME/.poetry
-          key: ${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ env.GITHUB_RUN_ID }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('**/pyproject.toml') }}
       - name: Update Path
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
       - name: Activate virtualenv
