--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,18 +66,16 @@ jobs:
           key: ${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('**/pyproject.toml') }}
       - name: Update Path
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-      - name: Activate virtualenv
-        run: poetry shell
       - name: Style guide
         run: |
-          flake8 --select=E,W,I --max-line-length 80 --import-order-style pep8 --exclude .git,__pycache__,.eggs,*.egg,.pytest_cache,fastapi_mvc_template/version.py,setup.py,fastapi_mvc_template/__init__.py --tee --output-file=pep8_violations.txt --statistics --count setup.py fastapi_mvc_template
-          flake8 --select=D --ignore D301 --tee --output-file=pep257_violations.txt --statistics --count setup.py fastapi_mvc_template
+          poetry run flake8 --select=E,W,I --max-line-length 80 --import-order-style pep8 --exclude .git,__pycache__,.eggs,*.egg,.pytest_cache,fastapi_mvc_template/version.py,setup.py,fastapi_mvc_template/__init__.py --tee --output-file=pep8_violations.txt --statistics --count setup.py fastapi_mvc_template
+          poetry run flake8 --select=D --ignore D301 --tee --output-file=pep257_violations.txt --statistics --count setup.py fastapi_mvc_template
       - name: Code errors
-        run: flake8 --select=F --tee --output-file=flake8_code_errors.txt --statistics --count setup.py fastapi_mvc_template
+        run: poetry run flake8 --select=F --tee --output-file=flake8_code_errors.txt --statistics --count setup.py fastapi_mvc_template
       - name: Code complexity
-        run: flake8 --select=C901 --tee --output-file=code_complexity.txt --count fastapi_mvc_template
+        run: poetry run flake8 --select=C901 --tee --output-file=code_complexity.txt --count fastapi_mvc_template
       - name: TODO
-        run: flake8 --select=T --tee --output-file=todo_occurence.txt --statistics --count setup.py fastapi_mvc_template tests
+        run: poetry run flake8 --select=T --tee --output-file=todo_occurence.txt --statistics --count setup.py fastapi_mvc_template tests
   unit-tests:
     needs: build
     runs-on: ubuntu-latest
@@ -98,12 +96,10 @@ jobs:
           key: ${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('**/pyproject.toml') }}
       - name: Update Path
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-      - name: Activate virtualenv
-        run: poetry shell
       - name: Run unit tests
-        run: py.test tests/unit --junit-xml=xunit-${{ matrix.python-version }}.xml
+        run: poetry run py.test tests/unit --junit-xml=xunit-${{ matrix.python-version }}.xml
       - name: Run coverage
-        run: pytest --cov=fastapi_mvc_template --cov-fail-under=70 --cov-report=xml --cov-report=term-missing tests
+        run: poetry run pytest --cov=fastapi_mvc_template --cov-fail-under=70 --cov-report=xml --cov-report=term-missing tests
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
@@ -129,7 +125,5 @@ jobs:
           key: ${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('**/pyproject.toml') }}
       - name: Update Path
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-      - name: Activate virtualenv
-        run: poetry shell
       - name: Run integration tests
-        run: py.test tests/integration --junit-xml=xunit-${{ matrix.python-version }}.xml
+        run: poetry run py.test tests/integration --junit-xml=xunit-${{ matrix.python-version }}.xml
