--- a/charts/fastapi-mvc-template/values.yaml
+++ b/charts/fastapi-mvc-template/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: fastapi-mvc-template
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.3.0"
+  tag: ""
 
 configMap:
   redisHost: "rfs-redisfailover-persistent-keep"
