Add black dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ flake8 = "~3.9.2"
 flake8-docstrings = "~1.6.0"
 flake8-import-order = "~0.18.1"
 flake8-todo = "^0.7"
+black = "^21.12b0"
 
 [tool.poetry.scripts]
 fastapi = 'fastapi_mvc_template.cli.cli:cli'
