--- a/charts/fastapi-mvc-template/templates/configmap.yml
+++ b/charts/fastapi-mvc-template/templates/configmap.yml
@@ -5,6 +5,8 @@ metadata:
   labels:
     {{- include "fastapi-mvc-template.labels" . | nindent 4 }}
 data:
+  fastapi_debug: "{{ .Values.configMap.debug }}"
+  fastapi_use_redis: "{{ .Values.configMap.useRedis }}"
   fastapi_redis_host: "{{ .Values.configMap.redisHost }}"
   fastapi_redis_port: "{{ .Values.configMap.redisPort }}"
   fastapi_redis_use_sentinel: "{{ .Values.configMap.redisUseSentinel }}"
