--- a/fastapi_mvc/template/{{cookiecutter.folder_name}}/charts/{{cookiecutter.chart_name}}/Chart.yaml
+++ b/fastapi_mvc/template/{{cookiecutter.folder_name}}/charts/{{cookiecutter.chart_name}}/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: {{cookiecutter.folder_name}}
+name: {{cookiecutter.chart_name}}
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
