--- a/fastapi_mvc/template/{{cookiecutter.folder_name}}/charts/{{cookiecutter.chart_name}}/values.yaml
+++ b/fastapi_mvc/template/{{cookiecutter.folder_name}}/charts/{{cookiecutter.chart_name}}/values.yaml
@@ -1,11 +1,11 @@
-# Default values for {{cookiecutter.folder_name}}.
+# Default values for {{cookiecutter.chart_name}}.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: {{cookiecutter.folder_name}}
+  repository: {{cookiecutter.docker_image_name}}
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -53,7 +53,7 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
   host:
-    name: {{cookiecutter.folder_name}}.kubernetes.local
+    name: {{cookiecutter.chart_name}}.kubernetes.local
     paths: [/]
 
 resources: {}
